--- a/waagreen/src/main/resources/templates/Admin/report.html
+++ b/waagreen/src/main/resources/templates/Admin/report.html
@@ -1,40 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:layout="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      layout:decorate="~{layouts/layout}">
 <head>
-    <meta charset="ISO-8859-1">
-    <title>Insert title here</title>
+    <meta charset="UTF-8">
+    <title>Attendance</title>
 </head>
 <body>
-<table class="table is-fullwidth is-hoverable" id="result">
-    <thead>
-    <tr>
-        <th> Id </th>
-        <th> NAME</th>
-        <th> EMAIL ADDRESS</th>
-        <th> MEDITATION DAYS</th>
-        <th> MEDITATION PERCENTAGE</th>
-        <th>EXTRA POINTS</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="attend : ${report}">
-        <td th:text="${attend.student.firstName}">1</td>
-        <td th:text="${attend.student.lastName}">001</td>
-        <td th:text="${attend.attendanceDate}">Name</td>
-        <td th:text="${attend.attendanceType.types}">City</td>
-        <td th:text="">Country</td>
-    </tr>
-    </tbody>
-    <tfoot>
-    <tr>
-        <th> ID </th>
-        <th> NAME</th>
-        <th> EMAIL ADDRESS</th>
-        <th> MEDITATION DAYS</th>
-        <th> MEDITATION PERCENTAGE</th>
-        <th>EXTRA POINTS</th>
-    </tr>
-    </tfoot>
-</table>
+<div layout:fragment="main-content">
+    <table class="table is-fullwidth is-hoverable" id="result">
+        <thead>
+        <tr>
+            <th> Id </th>
+            <th> NAME</th>
+            <th> EMAIL ADDRESS</th>
+            <th> MEDITATION DAYS</th>
+            <th> MEDITATION PERCENTAGE</th>
+            <th>EXTRA POINTS</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="attend : ${report}">
+            <td th:text="${attend.student.firstName}">1</td>
+            <td th:text="${attend.student.lastName}">001</td>
+            <td th:text="${attend.attendanceDate}">Name</td>
+            <td th:text="${attend.attendanceType.types}">City</td>
+            <td th:text="">Country</td>
+        </tr>
+        </tbody>
+        <tfoot>
+        <tr>
+            <th> ID </th>
+            <th> NAME</th>
+            <th> EMAIL ADDRESS</th>
+            <th> MEDITATION DAYS</th>
+            <th> MEDITATION PERCENTAGE</th>
+            <th>EXTRA POINTS</th>
+        </tr>
+        </tfoot>
+    </table>
+</div>
 </body>
 </html>
