--- a/waagreen/src/main/resources/templates/faculty/facultyreport.html
+++ b/waagreen/src/main/resources/templates/faculty/facultyreport.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:layout="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
       layout:decorate="~{layouts/layout}">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
- <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
-<script type="text/javascript" src="/js/jquery-3.3.1.js" th:src="@{/js/jquery-3.3.1.js}"  ></script>
-<script type="text/javascript" src="/js/faculty.js" th:src="@{/js/faculty.js}"  ></script>
- 
+    <meta charset="UTF-8">
+    <title>Attendance</title>
 </head>
 <body>
 <div layout:fragment="main-content">
-
-<form>
-<input type="button" value="Ajax call" id="mybtn" >
-</form>
-  </div>
+    <form>
+        <input type="button" value="Ajax call" id="mybtn">
+    </form>
+</div>
 </body>
-
 </html>
