--- a/waagreen/src/main/resources/templates/fragments/nav.html
+++ b/waagreen/src/main/resources/templates/fragments/nav.html
@@ -4,33 +4,22 @@
 </head>
 <body>
 <nav class="navbar is-dark" role="navigation" th:fragment="nav">
-    <nav class="navbar is-dark">
-	<div class="container">
-	<div class="navbar-brand">
-		<a class="navbar-item" href="http://localhost:8080/admin/admin"> 
-			<h1>ADMIN</h1>	
-		</a>
-	</div>
-	<div class="navbar-brand">
-		<a class="navbar-item" href="http://localhost:8080/faculty/faculty"> 
-		<h1>FACULTY</h1>
-			</a>
-	</div>
-	
-	<div class="navbar-brand">
-		<a class="navbar-item" href="http://localhost:8080/student/student"> 
-		<h1>STUDENT</h1>
-			</a>
-	</div>
-	<div class="navbar-menu">
-		<div class="navbar-end">
-			
-		</div>
-	</div>
-	</div>
-   
-    
-</nav>
+    <div class="container">
+        <div class="navbar-brand">
+            <a class="navbar-item" href="/admin/admin">
+                <h1>ADMIN</h1>
+            </a>
+            <a class="navbar-item" href="/faculty/faculty">
+                <h1>FACULTY</h1>
+            </a>
+            <a class="navbar-item" href="/student/student">
+                <h1>STUDENT</h1>
+            </a>
+            <a class="navbar-item" href="/admin/attendance">
+                <h1>ATTENDANCE</h1>
+            </a>
+        </div>
+    </div>
 </nav>
 </body>
 </html>
