--- a/waagreen/src/main/resources/templates/home.html
+++ b/waagreen/src/main/resources/templates/home.html
@@ -1,40 +1,12 @@
- <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en" xmlns:layout="http://www.w3.org/1999/xhtml"
+      layout:decorate="~{layouts/layout}">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-<link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
+    <meta charset="UTF-8">
+    <title>Home</title>
 </head>
 <body>
-<nav class="navbar is-dark">
-	<div class="container">
-	<div class="navbar-brand">
-		<a class="navbar-item" href="/admin/admin"> 
-			<h1>ADMIN</h1>	
-		</a>
-	</div>
-	<div class="navbar-brand">
-		<a class="navbar-item" href="/faculty/faculty"> 
-		<h1>FACULTY</h1>
-			</a>
-	</div>
-	
-	<div class="navbar-brand">
-		<a class="navbar-item" href="/student/student"> 
-		<h1>STUDENT</h1>
-			</a>
-	</div>
-	<div class="navbar-brand">
-		<a class="navbar-item" href="/admin/attendance"> 
-		<h1>ATTENDANCE</h1>
-			</a>
-	</div>
-	</div>
-   
-    
-</nav>
-<br>
-
-
+<div layout:fragment="main-content">
+</div>
 </body>
 </html>
