--- a/waagreen/src/main/resources/templates/layouts/layout.html
+++ b/waagreen/src/main/resources/templates/layouts/layout.html
@@ -4,17 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" th:href="@{/css/bulmastyle.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/font-awsome.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/customstyle.css}"/>
-<<<<<<< HEAD
-     <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
-<script type="text/javascript" src="/js/jquery-3.3.1.js" th:src="@{/js/jquery-3.3.1.js}"  ></script>
-<script type="text/javascript" src="/js/faculty.js" th:src="@{/js/faculty.js}"  ></script>
- 
-=======
     <link rel="stylesheet" type="text/css" th:href="@{/css/loader.css}"/>
-
->>>>>>> branch 'master' of https://selina.tesfabrhan%40gmail.com@github.com/Selinatesfa/waagreen.git
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
     <title layout:title-pattern=" $CONTENT_TITLE - $LAYOUT_TITLE">MUM</title>
 </head>
 <body class="d-flex flex-column h-100" cz-shortcut-listen="true">
@@ -38,5 +30,6 @@
 <footer th:replace="fragments/footer :: footer"></footer>
 <script type="text/javascript" th:src="@{/js/jquery-3.3.1.js}"></script>
 <script type="text/javascript" th:src="@{/js/attendance.js}"></script>
+<script type="text/javascript" th:src="@{/js/faculty.js}"></script>
 </body>
 </html>
