--- a/waagreen/src/main/resources/templates/student/Student.html
+++ b/waagreen/src/main/resources/templates/student/Student.html
@@ -3,46 +3,31 @@
       xmlns:th="http://www.thymeleaf.org"
       layout:decorate="~{layouts/layout}">
 <head>
-    <meta charset="ISO-8859-1">
-    <title>Computer ProfessionalS Program </title>
-    <link href="css/main.css" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
-    <link rel="stylesheet" th:href="@{/css/main.css}" href="../css/main.css" />
-    <script type="text/javascript"
-            th:href="@{/js/student.js}"></script>
+    <meta charset="UTF-8">
+    <title>Attendance</title>
 </head>
 <body>
 <div layout:fragment="main-content">
-<div class="box">
-    Total sessions possible:
-    <div th:text="${result.possibledays}"> Total sessions possible:</div>
-    Total sessions attended:
-    <div th:text="${result.daysattended}"> Total sessions attended:</div>
-    percentage
-    <div th:text="${result.per}"> percentage</div>
-</div>
+    <div class="box">
+        Total sessions possible:
+        <div th:text="${result.possibledays}"> Total sessions possible:</div>
+        Total sessions attended:
+        <div th:text="${result.daysattended}"> Total sessions attended:</div>
+        percentage
+        <div th:text="${result.per}"> percentage</div>
+    </div>
     <div class="admin container">
-
         <table class="table is-fullwidth is-hoverable" id="result">
             <tr>
-
                 <th> Date</th>
-
                 <th> Present</th>
-
             </tr>
-
-                    <tr th:each="data : ${result.dateofmed}">
-
-    <td th:text="${data}" ></td>
-    <td th:text ="${result.available}"></td>
-
-        </tr>
-
-
-</table>
-
-</div>
+            <tr th:each="data : ${result.dateofmed}">
+                <td th:text="${data}"></td>
+                <td th:text="${result.available}"></td>
+            </tr>
+        </table>
+    </div>
 </div>
 </body>
 </html>
