--- a/waagreen/src/main/resources/templates/student/StudentDetails.html
+++ b/waagreen/src/main/resources/templates/student/StudentDetails.html
@@ -1,37 +1,22 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org/">
+<html lang="en" xmlns:layout="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      layout:decorate="~{layouts/layout}">
 <head>
     <meta charset="UTF-8">
-    <title>Student Detail</title>
-    <link href="css/home.css" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" th:href="@{/css/home.css}" href="../css/home.css"/>
+    <title>Attendance</title>
 </head>
 <body>
-
-<div class="box" id="center-panel-grid">
-    <div class="navbar-brand">
-        <a class="navbar-item" href="https://bulma.io">
-
-            <h4><strong>>>>>>>>The student Accumulative information<<<<<<<<</strong></h4>
-        </a>
-
-    </div>
+<div layout:fragment="main-content">
+    </br><h3><strong>>>>>>>>The student Accumulative information<<<<<<<<</strong></h3></br>
+    <form th:action="@{/student/studentDetails}" method="get">
+        <select class="select" name="block">
+            <option value="default"><span>Select block</span></option>
+            <option th:each="block : ${blockList}" th:value="${block.block}"
+                    th:text="${block.block}"></option>
+        </select>
+        <input class="button is-link" th:type="submit" th:value="Submit"/>
+    </form>
 </div>
-        <div>
-        <div class="dropdown">
-            <form th:action="@{/student/studentDetails}" method="get">
-                <select class="blue-margin" name="block">
-                    <option value="default"><span>Select block</span></option>
-                    <option th:each="block : ${blockList}" th:value="${block.block}"
-                            th:text="${block.block}"></option>
-                </select>
-
-
-                <input class=" table is-fullwidth is-hoverable" th:type="submit" th:value="Submit"/>
-            </form>
-
-        </div>
-    </div>
-
 </body>
 </html>
