--- a/waagreen/src/main/resources/templates/Admin/attendance.html
+++ b/waagreen/src/main/resources/templates/Admin/attendance.html
@@ -33,7 +33,7 @@
                 <div class="level-item">
                     <button id="uploadFile" type="button" class="button is-primary">Upload</button>
                 </div>
-                <di class="level-item"><span id="fileError">ERROR MESSAGE  SHOULD BEE HERE</span></di>
+                <di class="level-item"><span id="fileError" style="color:#d91e18;"></span></di>
             </div>
         </div>
     </form>
