--- a/waagreen/src/main/resources/templates/login.html
+++ b/waagreen/src/main/resources/templates/login.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Login - Free Bulma template</title>
+    <title>Login</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-    <!-- Bulma Version 0.7.4-->
     <link rel="stylesheet" type="text/css" th:href="@{/css/bulmastyle.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/login.css}"/>
 </head>
@@ -38,7 +37,7 @@
                             </div>
                         </div>
                         <div align="center field" th:if="${error}">
-                            <p>Email or Password invalid, please verify</p>
+                            <p style="color: #d91e18">Email or Password invalid, please verify</p>
                         </div>
                         <div class="field">
                             <label class="checkbox">
