--- a/waagreen/src/main/resources/templates/home.html
+++ b/waagreen/src/main/resources/templates/home.html
@@ -6,6 +6,25 @@
     <title>Home</title>
 </head>
 <body>
+<nav class="navbar is-dark" role="navigation" th:fragment="nav">
+    <div class="container">
+        <div class="navbar-brand">
+            <a class="navbar-item" href="/admin/admin">
+                <h1>ADMIN</h1>
+            </a>
+            <a class="navbar-item" href="/faculty/faculty">
+                <h1>FACULTY</h1>
+            </a>
+            <a class="navbar-item" href="/student/student">
+                <h1>STUDENT</h1>
+            </a>
+            <a class="navbar-item" href="/admin/attendance">
+                <h1>ATTENDANCE</h1>
+            </a>
+        </div>
+    </div>
+</nav>
+
 <div layout:fragment="main-content">
 </div>
 </body>
